Serve media with partial content using flask

--- a/server/core/templates/core/songslist.html
+++ b/server/core/templates/core/songslist.html
@@ -1,1 +1,41 @@
-succ2
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+<ul>
+	<audio controls id='audio_core'></audio>
+    <br><br>
+
+    {% for song in songs %}
+        <li>
+            <a href="#" class="song-link" id="song{{ song.pk }}">{{ song.title }}</a>
+        </li>
+    {% endfor %}
+</ul>
+
+<script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+
+<script>
+    $(document).ready(() => {
+        $('.song-link').each(function () {
+            $(this).click(function () {
+                song_id = $(this).attr('id').slice(4)
+                $.get('/media/song/' + song_id, (data) => {
+                    audio_core=$('#audio_core').attr('src', 'http://localhost:8001/song/'+data)[0]
+                    audio_core.play()
+                })
+            })
+        })
+    })
+</script>
+</body>
+</html>
